--- a/style.css
+++ b/style.css
@@ -11,10 +11,16 @@ body {
     overflow-x: hidden;
 }
 
+::selection {
+    color: black;
+    background-color: #FF0037;
+}
+
 header nav {
-    padding: 1rem;
+    padding: 1rem 5rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 header nav a{
@@ -24,6 +30,9 @@ header nav a{
 
 header nav input {
     height: 2rem;
+    width: 15rem;
+    color: black;
+    padding: 0.5rem;
 }
 
 header label {
@@ -73,3 +82,23 @@ header section button:hover {
 img {
     width: 14rem;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #555555;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #444444; 
+  }
