--- a/source/style.css
+++ b/source/style.css
@@ -23,7 +23,7 @@ header nav {
     align-items: center;
 }
 
-header nav a{
+header nav a {
     font-size: 3rem;
 }
 
@@ -74,11 +74,11 @@ header section button:hover {
 }
 
 .movie:hover {
-    transform: scale(1.1,1.1);
+    transform: scale(1.1, 1.1);
     cursor: pointer;
 }
 
-img {
+.movie img {
     width: 14rem;
 }
 
@@ -86,22 +86,74 @@ a {
     text-decoration: none;
 }
 
+/*Styling detail page*/
+
+.ww {
+    width: 100%;
+    height: 20rem;
+    object-fit: fill;
+    margin: auto;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+}
+
+.container {
+    position: relative;
+    text-align: center;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centered img {
+    width: 10rem;
+}
+
+.movieDetails {
+    margin: 3rem;
+    background-color: #333333;
+}
+
+.movieDetails span{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #222;
+    text-transform: uppercase;
+}
+
+.movieDetails h1 {
+    font-size: 3rem;
+}
+
+.movieDetails article {
+    padding: 2rem;
+}
+
 /* width */
+
 ::-webkit-scrollbar {
     width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
     background: #555555;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #444444; 
-  }
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+    background: #444444;
+}
