--- a/source/style.css
+++ b/source/style.css
@@ -41,6 +41,11 @@ header nav input {
     padding: 0.5rem;
 }
 
+header nav input:focus {
+    outline: none;
+    border: 2px solid var(--accent);
+}
+
 header label {
     display: none;
 }
@@ -123,6 +128,7 @@ a {
 .movieDetails {
     margin: 3rem;
     background-color: var(--secondary);
+    width: 40%;
 }
 
 .movieDetails span{
