--- a/source/style.css
+++ b/source/style.css
@@ -69,8 +69,8 @@ header section button:hover {
 
 #movie-template {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .movie-title {
@@ -177,18 +177,18 @@ a {
 }
 
 /*loader from https://loading.io/css/*/
-.lds-spinner {
+#lds-spinner {
     margin: 30vh auto;
     width: 80px;
     height: 80px;
 }
 
-.lds-spinner div {
+#lds-spinner div {
     transform-origin: 40px 40px;
     animation: lds-spinner 1.2s linear infinite;
 }
 
-.lds-spinner div:after {
+#lds-spinner div:after {
     content: " ";
     display: block;
     position: absolute;
@@ -200,62 +200,62 @@ a {
     background: #fff;
 }
 
-.lds-spinner div:nth-child(1) {
+#lds-spinner div:nth-child(1) {
     transform: rotate(0deg);
     animation-delay: -1.1s;
 }
 
-.lds-spinner div:nth-child(2) {
+#lds-spinner div:nth-child(2) {
     transform: rotate(30deg);
     animation-delay: -1s;
 }
 
-.lds-spinner div:nth-child(3) {
+#lds-spinner div:nth-child(3) {
     transform: rotate(60deg);
     animation-delay: -0.9s;
 }
 
-.lds-spinner div:nth-child(4) {
+#lds-spinner div:nth-child(4) {
     transform: rotate(90deg);
     animation-delay: -0.8s;
 }
 
-.lds-spinner div:nth-child(5) {
+#lds-spinner div:nth-child(5) {
     transform: rotate(120deg);
     animation-delay: -0.7s;
 }
 
-.lds-spinner div:nth-child(6) {
+#lds-spinner div:nth-child(6) {
     transform: rotate(150deg);
     animation-delay: -0.6s;
 }
 
-.lds-spinner div:nth-child(7) {
+#lds-spinner div:nth-child(7) {
     transform: rotate(180deg);
     animation-delay: -0.5s;
 }
 
-.lds-spinner div:nth-child(8) {
+#lds-spinner div:nth-child(8) {
     transform: rotate(210deg);
     animation-delay: -0.4s;
 }
 
-.lds-spinner div:nth-child(9) {
+#lds-spinner div:nth-child(9) {
     transform: rotate(240deg);
     animation-delay: -0.3s;
 }
 
-.lds-spinner div:nth-child(10) {
+#lds-spinner div:nth-child(10) {
     transform: rotate(270deg);
     animation-delay: -0.2s;
 }
 
-.lds-spinner div:nth-child(11) {
+#lds-spinner div:nth-child(11) {
     transform: rotate(300deg);
     animation-delay: -0.1s;
 }
 
-.lds-spinner div:nth-child(12) {
+#lds-spinner div:nth-child(12) {
     transform: rotate(330deg);
     animation-delay: 0s;
 }
