--- a/source/style.css
+++ b/source/style.css
@@ -15,7 +15,6 @@
 body {
     background-color: var(--primary);
     overflow-x: hidden;
-    cursor: url('../images/cursor.png'), auto;
 }
 
 ::selection {
@@ -23,6 +22,7 @@ body {
     background-color: var(--accent);
 }
 
+/*Header styling*/
 header nav {
     padding: 1rem 5rem;
     display: flex;
@@ -64,6 +64,7 @@ header section button {
     width: 5rem;
 }
 
+/*Dropdown for sorting styling*/
 .dropbtn {
     background-color: var(--secondary);
     border: none;
@@ -104,6 +105,7 @@ header section button:hover {
     cursor: pointer;
 }
 
+/*Content styling*/
 #movie-template {
     display: flex;
     flex-wrap: wrap;
@@ -136,7 +138,6 @@ a {
 }
 
 /*Styling detail page*/
-
 .ww {
     width: 100%;
     height: 20rem;
@@ -184,38 +185,29 @@ a {
     padding: 2rem;
 }
 
-/* width */
-
+/*Scrollbar styling*/
 ::-webkit-scrollbar {
     width: 20px;
 }
-
-/* Track */
 
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
 }
 
-/* Handle */
-
 ::-webkit-scrollbar-thumb {
     background: #555555;
 }
-
-/* Handle on hover */
 
 ::-webkit-scrollbar-thumb:hover {
     background: #444444;
 }
 
 /*Hides anything, used for toggle*/
-
 .hide {
     display: none;
 }
 
 /*loader from https://loading.io/css/*/
-
 #lds-spinner {
     margin: 30vh auto;
     width: 80px;
